--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,94 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(/images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+section {
+  display: flex;
+  justify-content: center;
+}
+
+.phones {
+  margin: 40px;
+  margin-top: 100px;
+  height: 500px;
+}
+
+.home {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 100px;
+}
+
+.home a {
+  display: flex;
+  justify-content: space-between;
+  border: 2px solid #386489;
+  border-radius: 5px;
+  background: rgb(115,149,177);
+  background: linear-gradient(184deg, rgba(115,149,177,1) 0%, rgba(73,116,153,1) 100%);
+  padding: 10px;
+  width: 80px;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+}
+
+
+.logo{
+  height: 60px;
+}
+
+article {
+  margin-top: 20px;
+  width: 450px;
+  padding: 20px;
+  background-image: url(/images/frame.png);
+  background-position: top;
+  background-repeat: no-repeat;
+}
+
+h1 {
+  color: #06365f;
+  width: 200px;
+}
+
+p {
+  width: 400px;
+}
+
+.buttons {
+  margin: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.download-button {
+  width: 150px;
+  margin: 5px;
+}
+
+footer {
+  margin: 30px;
+  font-weight: bolder;
+}
+
+.nav-bar-ul {
+  display: flex;
+  justify-content: center;
+  text-transform: uppercase;
+  text-align: center;
+  color: grey;
+  list-style: none;
+  font-size: 14px;
+}
+
+.nav-bar-ul a {
+  color: #1c5380;
+  list-style: none;
+  text-decoration: none;
+  margin: 0px 10px;
 }
