--- a/styles/style.css
+++ b/styles/style.css
@@ -6,13 +6,21 @@ light blue: #1c5380
 
 *{
   margin: 0;
-  border: 0;
+  /* border: 1px solid red; */
 }
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: fixed linear-gradient(0deg, white 70%, #1c5380 30%);
   
+}
+h1{
+  width: 300px;
+  color: #1c5380 ;
+}
+.badge-izq{
+  margin-right: 20px;
 }
 
 .flex-container{
@@ -26,19 +34,82 @@ body {
 }
 .container-derecha{
   margin-left: 50px;
-  width: 400px;
+  width: 50%;
+  
 }
 .container-derecha-arriba{
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+.fondo-blanco{
   
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat ;
+  background-size: 100% 100%;
+  padding-left: 25px;
+  padding-top: 30px;
+  padding-right: 10px;
+
 }
 
-.footer{
+footer{
   margin-top: 20px;
   display: flex;
   list-style-type: none;
-  justify-content: space-between;
+  align-items: center;
+  text-transform: uppercase;
+  font-weight: 400;
+  
+
+}
+ul{
+  display: flex;
+  justify-content: space-around;
+  margin-left: 300px;
+  margin-right: 20px;
+  color: #1c5380;
+}
+li{
+  list-style-type: none;
+  margin-right: 9px;
+}
+
+p{
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.links{
+  margin-top: 30px;
+  margin-left: 25px
+}
+.brand-logo{
+  margin-right: 20px;
+}
+.gray{
+  color: gray;
+}
+.imagen-boton{
+  
+  
+  background-color: #06365f;
+  padding: 18px;
+}
+
+ 
+.container-derecha-arriba a{
+  display: flex;
+  align-items: center;
+  width: 100px;
+  text-decoration: none;
+  color: white;
+  justify-content: space-evenly;
+  background-color: #06365f;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-right: 10px;
 }
 
 
