--- a/styles/style.css
+++ b/styles/style.css
@@ -6,5 +6,78 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 150px;
+  margin-bottom: 50px;
+  background-image: url("./../images/bgtile.png");
+  background-repeat: repeat-x;
+  
+
+}
+container{
+  display: flex;
+  justify-content: space-evenly;
+  
+}
+.section-one{
+ margin-left: 40px;
+  margin-top: 40px;
+}
+.instagram-logo-login{
+  display:flex;
+  justify-content: space-between;
+}
+.capture-moments{
+  border-radius: 4px;
+  margin-top: 30px;
+  padding: 30px;
+  background-image: url("./../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding-bottom: 0;
+
+}
+
+h1{
   margin: 0;
+  color: #06365f;
+}
+button{
+  color: rgb(210 221 230);
+  width: 100px;
+  display: flex;
+  justify-content: space-evenly;
+  background: linear-gradient( #3a6890, #1c5380 );
+  border: 1px solid #1c5380;
+  border-radius: 2px;
+}
+.button{
+  margin-top: 14px;
+}
+button img{
+  margin-top: 6px;
+}
+.badges{
+  margin-top: 70px;
+}
+.badge-iphone{
+  margin-right: 25px;
+}
+
+ul{
+  color: #547da1;
+  font-weight: 600;
+  text-transform: uppercase;
+  list-style-type: none;
+    margin: auto;
+    padding: 0;
+    display: flex;
+    justify-content: space-evenly;
+    width: 80%;
+    text-align: center;
+}
+ul .copy {
+ color: #c3c3c4;
+}
+footer{
+  padding-top: 50px;
 }
