--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@ body {
   justify-content: center;
   height: 100%;
   margin: 80px 50px;
-  background-image: url(/lab-css-instagram-clone/images/bgtile.png);
+  background-image: url(/images/bgtile.png);
   background-repeat: repeat-x;
 }
 
@@ -90,7 +90,7 @@ span{
   border-radius: 10px;
   padding: 25px 55px;
   margin-top: 20px;
-  background-image: url(/lab-css-instagram-clone/images/frame.png);
+  background-image: url(/images/frame.png);
   background-repeat: no-repeat;
   background-size: contain;
 }
