--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+* {
+  margin:0;
+  padding:0;
+}
 /*
 Colors to use:
 dark blue: #06365f
@@ -7,4 +11,97 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("./../images/bgtile.png");
+  background-repeat: repeat-x;
+  
+}
+
+header {
+  padding: 50px
+}
+
+.headercontainer{
+display:flex;
+justify-content:right;
+}
+
+.login{
+background-color:#1c5380;
+margin: 30px;
+border-radius: 4px;
+padding: 20px;
+width: 100px;
+
+}
+
+.login a{
+  color:white;
+  text-decoration: none;
+  margin: 5px;
+}
+
+.principlecontainer{
+  display:flex;
+  justify-content: center
+  align-items: center;
+  margin: 30px;
+}
+
+.logo-login{
+  display: flex;
+  justify-content: space-evenly;
+  width: 66%;
+  margin-top: 20px;
+}
+
+.information{
+  background-image: url("./../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin: 30px;
+  
+  
+  
+}
+.information p{
+  width: 70%;
+  margin-left: 20px;
+  margin-bottom: 50px;
+  padding-top: 12px;
+}
+
+h1{
+  color: #1c5380;
+  margin: 25px;
+  margin-bottom: 0;
+}
+.downloads{
+  width: 55%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  
+}
+
+
+
+.finalsection{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.informationextra a{
+  font-weight: bold;
+  color: #1c5380;
+  margin: 20px;
+  text-decoration: none;
+  text-transform: uppercase;
+  
+}
+.license  {
+  font-weight: bold;
+  color: grey;
+  text-transform: uppercase;
+
 }
