--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,101 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*{
+ font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif; 
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 5%;
+  background: linear-gradient(#1c5380 35%,white 26%);
+  display: inline-block;
 }
+section1{  
+  display: flex;
+  width: 75%; 
+  padding:15px;
+}
+.phones{
+  padding:15px;
+}
+.logoinstagran{
+  display:flex;
+  align-items:center;
+  justify-content: space-between;
+  padding:20px;
+  
+}
+.buttonlogin{
+  padding: 15px;
+  width:100px;
+  display:flex;
+  flex-direction: row;
+  background-color:#1c5380;
+  border: #06365f 0.5px solid;
+
+  border-radius:10px;
+  color:white;
+   font: 200 13px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+.frametext{ 
+  padding-top: 30px;
+ background-image:url( "https://raw.githubusercontent.com/ridersalva/lab-css-instagram-clone/master/images/frame.png");
+  background-repeat: no-repeat;
+  background-size:100% 100%;
+  text-align: center;
+  align-items: center;
+}
+h1{
+  padding-top: 10px;
+  padding-left: 40px;
+  color:#06365f;
+  font-weight: bold;
+  font-size: 2.3em;
+  width: 410px;
+  text-align: left;
+}
+.textexplain1{
+  margin-left:20px;
+text-align:left;
+ padding:10px;
+  width:85%;
+}
+.textexplain2{
+  margin-left:20px;
+text-align:left;
+ padding:10px;
+  width:85%;
+}
+section ul{
+  float:center;
+  width: 650px;
+  background-color: white;
+  font: 200 13px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+  text-transform:uppercase;
+}
+.div1{
+  font: 200 13px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  float:center;
+  width: 650px;
+  background-color: white;
+  font: 200 13px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin-left:350px;
+  text-transform:uppercase;
+}
+ul{
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  text-decoration: none;
+  color:#06365f;
+  text-transform: bold;
+}
+.supremo{
+  display:flex;
+  margin-left:250px;
+}
+
+
