--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
-  background-image: url("/images/bgtile.png");
+  background-image: url("./images/bgtile.png");
   background-repeat: repeat-x;
   display: flex;
   flex-direction: column;
@@ -65,7 +65,7 @@ section a {
 
 article {
   
-  background-image: url(/images/frame.png);
+  background-image: url(./images/frame.png);
   background-repeat:no-repeat;
   background-size:100% 100%;
   padding: 20px;
