--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,81 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+* {
+  margin: auto;
+  padding: 0px;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  background-image: url("/lab-css-instagram-clone/images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  padding: 100px 200px;
+}
+.phone {
+  display: flex;
+  align-items: center;
+}
+
+h2 {
+  color: #1c5380;
+}
+
+.box {
+  width: 450px;
+}
+.upper-boxes {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
+.button {
+  border: 1px #1c5380 solid;
+  background-color:linear-gradient(#21527a solid)
+  color: white;
+  padding: 5px 10px;
+  text-decoration: none;
+}
+h2 {
+  margin-bottom: 20px;
+}
+article {
+  margin-bottom: 15px;
+  background-image: url("/lab-css-instagram-clone/images/frame.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 30px;
+}
+.app-store {
+  display: flex;
+  justify-content: space-between;
+}
+#footer {
+  margin-bottom: 250px;
+}
+
+#footer ul {
+  display: flex;
+  width: 800px;
+  justify-content: space-between;
+}
+#footer ul li {
+  list-style: none;
+}
+#footer ul li a {
+  text-decoration: none;
+  color: #1c5380;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.copy {
+  text-transform: uppercase;
+  font-weight: bold;
+  color: gray;
 }
