--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,110 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+html,
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 200 10px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  height: 100%;
+  height: 100%;
+  padding: 0;
   margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-image: url(/images/bgtile.png);
+  background-color: #06365f;
+  padding-top: 90px;
+  background-repeat: repeat-x;
+}
+
+.wrap,
+.logButton,
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.wrap {
+  margin-bottom: 40px;
+}
+
+.phones img {
+  width: 350px;
+  margin-right: 30px;
+}
+
+.tab-content {
+  background-image: url(/images/frame.png);
+  background-color: white;
+  background-repeat: no-repeat;
+  padding: 25px 45px;
+}
+
+.tab-content span {
+  font-weight: bold;
+}
+
+.content {
+  width: 504px;
+}
+
+.login {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 10px;
+  margin-bottom: 15px;
+}
+
+.logButton {
+  color: white;
+  background-image: #06365f;
+  width: 95px;
+  height: 40px;
+  font-weight: 600;
+  border: 1px solid dark-blue;
+  border-radius: 3px;
+  cursor: pointer;
+  padding: 0px 10px;
+}
+
+.logButton img {
+  padding-right: 10px;
+}
+
+.content h1 {
+  color: #06365f;
+  font-size: 2.5rem;
+}
+
+.content p {
+  font-size: 1.5rem;
+}
+
+.badge-container img {
+  padding: 15px 20px 0 0;
+}
+
+footer ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+footer ul li {
+  text-transform: uppercase;
+  list-style: none;
+  padding: 0 10px;
+}
+
+footer li a {
+  color: #1c5380;
+  text-decoration: none;
+  font-weight: 700;
+}
+
+footer p {
+  color: grey;
 }
