--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,69 @@ light blue: #1c5380
 */
 
 body {
+  background-image: url("./../images/bgtile.png");
+  background-repeat: repeat-x;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+section {
+  display: flex;
+  margin: 50px 0 50px;
+  margin-left: 50;
+  padding: 80px;
+}
+header {
+  display: flex;
+  text-decoration: none;
+  margin: 60px 0 50px;
+  margin-top: 80px;
+  padding: 1px;
+  justify-content: space-between;
+}
+
+header a {
+  text-decoration: none;
+  color: white;
+  padding: 10px;
+  width: 80px;
+  background: #1c5380;
+}
+.phones {
+  margin: 50px;
+  margin-top: 80px;
+  height: 450px;
+}
+
+.logo {
+  height: 60px;
+}
+.container1 {
+  margin: 50px 0 50px;
+  padding: 10px;
+  text-decoration: none;
+  margin-top: 10px;
+}
+
+h1 {
+  color: #06365f;
+}
+.descargas {
+  margin-top: 50px;
+}
+footer {
+  margin: 100px;
+}
+.container2 {
+  margin: 20px 0 50px;
+  list-style: none;
+  justify-content: space-between;
+  display: flex;
+  padding: 1px;
+  color: black;
+  text-transform: uppercase;
+}
+.container2 a {
+  text-decoration: none;
+  color: rgb(61, 0, 230);
 }
