--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,43 @@ light blue: #1c5380
 */
 
 body {
+  background-color: white;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.flex-container{
+  display: flex;
+  flex-direction: row;
+}
+
+#caja1{ 
+  width: 40%;
+
+
+}
+
+#caja2{
+  width: 60%;
+
+  display: flex;
+  flex-direction: column;
+}
+
+#superiorCaja2{
+  display: flex;
+  flex-direction: row;
+
+}
+
+#inferiorCaja2{
+ display: flex;
+ flex-direction: column;
+}
+
+#fotoStores{
+  display: flex;
+  flex-direction: row;
+  
+
 }
