--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,7 @@ body {
   display: flex;
   flex-direction: row;
   padding: 5%;
+  
 }
 
 #caja1{ 
@@ -23,10 +24,12 @@ body {
 }
 
 #caja2{
-  width: 60%;
+  width: 35%;
   text-align: center;
   display: flex;
   flex-direction: column;
+  padding-right: 10%;
+  
   
 }
 
@@ -35,20 +38,33 @@ body {
   flex-direction: row;
   align-content: center;
   justify-content: space-between;
+  
 }
 
 #inferiorCaja2{
  display: flex;
  flex-direction: column;
+ text-align: left;
+ 
 }
 
 #fotoStores{
   display: flex;
   flex-direction: row;
+  align-content: center;
+  justify-content:left;
   
 }
 
 #fotoHome{
   display: flex;
   align-content: center;
+}
+
+#fotoDer{
+  margin-left: 20px;
+}
+
+#footer{
+  text-align: center;
 }
