--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,28 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+body > section1 {
+  align-items: center;
+  justify-items: center;
+  background: #06365f;
+
+}
+.botton home{
+width: ;
+
+}
+
+
+body > section2 {
+  width: 300px;
+  height: 300px;
+  border-radius: 20px;
+  margin: 30px;
+
+}
+
+body > section3 {
+align-items: center;
+
+}
