--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   height: 100%;
-  background: linear-gradient(180deg, #1c5380 40%, white 0%) 
+  background: linear-gradient(180deg, #1c5380 40%, white 0%)
 }
 
 .header {
@@ -90,6 +90,7 @@ body {
   font-weight: bold;
   margin-bottom: 30px;
   font-size: 15px;
+  text-transform: uppercase;
 }
 
 .blue-footer {
