--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,107 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
 }
+
+main {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 4rem 4rem 2rem 4rem;
+  position: relative;
+}
+main::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #1c5380;
+  height: 33vh;
+  width: 100%;
+  z-index: -1;
+  box-shadow: 0 20vh 30vh inset rgba(255, 255, 255, 0.2);
+}
+main #wrapper {
+  max-width: 40rem;
+}
+main #wrapper > div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+main #wrapper > div > img {
+  transform: scale(0.9);
+  margin-left: -8px;
+}
+main #wrapper > div a {
+  background-color: #1c5380;
+  padding: 0.7rem 1.3rem;
+  color: #fff;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  border-radius: 3px;
+  border: 1px solid #06365f;
+  font-weight: 600;
+  box-shadow: 0 27px 20px inset rgba(255, 255, 255, 0.4);
+}
+main #wrapper > div a img {
+  margin-right: 8px;
+}
+main #wrapper article {
+  position: relative;
+  z-index: 1;
+  margin-top: 3rem;
+}
+main #wrapper article::after {
+  content: url("../images/frame.png");
+  height: auto;
+  position: absolute;
+  top: -30px;
+  left: -30px;
+  z-index: -1;
+}
+main #wrapper article h2 {
+  color: #06365f;
+  display: block;
+  max-width: 20rem;
+  font-size: 1.6rem;
+}
+main #wrapper article p {
+  max-width: 28rem;
+  font-size: 0.9rem;
+  line-height: 1.4rem;
+}
+main #wrapper article > div {
+  padding-top: 3rem;
+}
+main #wrapper article > div img:first-child {
+  margin-right: 2rem;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.8rem;
+  font-weight: bold;
+  padding: 4rem 0;
+}
+footer ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  margin-right: 1rem;
+}
+footer ul li {
+  padding: 0 0.9rem;
+}
+footer ul li a {
+  text-decoration: none;
+  color: #1c5380;
+}
+footer span {
+  color: #b9b9b9;
+}/*# sourceMappingURL=style.css.map */
