--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,5 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: hsl(208deg 31% 46%);
 }
